<resources>
    <string name="app_name">Գուպի</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">SKIP</string>
    <string name="listen">LISTEN</string>
    <string name="domestic">Ընտանի</string>
    <string name="sea">Ծովային</string>
    <string name="whild">Վայրի</string>
    <string name="birds">Թռչուններ</string>
    <string name="learn">Սովորել</string>
    <string name="play">Խաղալ</string>
    <string name="easy">Հեշտ</string>
    <string name="middle">Միջին</string>
    <string name="hard">Բարդ</string>
    <string name="congratulations">Շնորհավոր</string>
    <string name="write">Գրել</string>
    <string name="bubbles">Փուչիկներ</string>
    <string name="puzzle">Փազլ</string>
    <string-array name="real_animal_whild">
        <item>lioness</item>
        <item>red_panda</item>
        <item>orangutan</item>
        <item>koala</item>
        <item>fox</item>
        <item>chipmunk</item>
        <item>chameleon</item>
        <item>bison</item>
        <item>black_bear</item>
        <item>boar</item>
        <item>cheetah</item>
        <item>chimpanzee</item>
        <item>deer</item>
        <item>elephant</item>
        <item>gazelle</item>
        <item>giraffe</item>
        <item>gorilla</item>
        <item>grizzly_bear</item>
        <item>hedgehog</item>
        <item>hippo</item>
        <item>hyena</item>
        <item>jackal</item>
        <item>jaguar</item>
        <item>kangaroo</item>
        <item>leopard</item>
        <item>lion</item>
        <item>lynx</item>
        <item>meerkat</item>
        <item>monkey</item>
        <item>opossum</item>
        <item>panda</item>
        <item>polar_bear</item>
        <item>porcupine</item>
        <item>raccoon</item>
        <item>squirrel</item>
        <item>tiger</item>
        <item>wolf</item>
        <item>zebra</item>
    </string-array>
    <string-array name="real_animal_whild_arm">
        <item>առյուծ</item>
        <item>կարմիր պանդա</item>
        <item>օրանգուտան</item>
        <item>կոալա</item>
        <item>աղվես</item>
        <item>սկյուռիկ</item>
        <item>քամելեոն</item>
        <item>Բիզոն</item>
        <item>Սև արջ</item>
        <item>վայրի խոզ</item>
        <item>Հովազ</item>
        <item>շիմպանզե</item>
        <item>եղնիկ</item>
        <item>փիղ</item>
        <item>քարայծ</item>
        <item>ընձուղտ</item>
        <item>գորիլա</item>
        <item>Գորշ արջ</item>
        <item>ոզնի</item>
        <item>գետաձի</item>
        <item>բորենի</item>
        <item>շնագայլ</item>
        <item>վագրակատու</item>
        <item>Կենգուրու</item>
        <item>ընձառյուծ</item>
        <item>առյուծ</item>
        <item>լուսան</item>
        <item>մանգուստ</item>
        <item>կապիկ</item>
        <item>օփոսում</item>
        <item>կամիկ</item>
        <item>պանդա</item>
        <item>սպիտակ արջ</item>
        <item>փորսուղ</item>
        <item>Ջրարջ</item>
        <item>սկյուռ</item>
        <item>վագր</item>
        <item>գայլ</item>
        <item>ԶԵԲՐ</item>
    </string-array>
    <string-array name="real_animal_sea">
        <item>tuna</item>
        <item>lizard</item>
        <item>sword_fish</item>
        <item>striped_marlin</item>
        <item>stingray</item>
        <item>squid</item>
        <item>otter</item>
        <item>orca_whale</item>
        <item>marlin</item>
        <item>alligator</item>
        <item>blue_whale</item>
        <item>cat_fish</item>
        <item>clown_fish</item>
        <item>cobra_snake</item>
        <item>crab</item>
        <item>crocodile</item>
        <item>dolphin</item>
        <item>eel</item>
        <item>frog</item>
        <item>iguana</item>
        <item>jelly_fish</item>
        <item>lobster</item>
        <item>octopus</item>
        <item>porcupine_fish</item>
        <item>python_snake</item>
        <item>rainbow_trout</item>
        <item>salamander</item>
        <item>sea_horse</item>
        <item>seal</item>
        <item>seaturtle</item>
        <item>sea_urchin</item>
        <item>shark</item>
        <item>shrimp</item>
        <item>starfish</item>
        <item>toad</item>
        <item>turtle</item>
        <item>warlus</item>
        <item>yellow_fish</item>
    </string-array>
    <string name="colors">Գույներ</string>
    <string-array name="real_animal_sea_arm">
        <item>թունա</item>
        <item>մողես</item>
        <item>թրաձուկ</item>
        <item>գծավոր սղոցաձուկ</item>
        <item>կատվաձուկ</item>
        <item>կաղամար</item>
        <item>ջրասամույր</item>
        <item>կետանման դելֆին</item>
        <item>սղոցաձուկ</item>
        <item>ալիգատոր</item>
        <item>Կապույտ կետ</item>
        <item>լոքո</item>
        <item>ծաղրածու ձուկ</item>
        <item>կոբրա</item>
        <item>ծովախեցգետին</item>
        <item>կոկորդիլոս</item>
        <item>դելֆին</item>
        <item>օձաձուկ</item>
        <item>գորտ</item>
        <item>վարան</item>
        <item>մեդուզա</item>
        <item>օմար</item>
        <item>ութոտնուկ</item>
        <item>ոզնեձուկ</item>
        <item>պիտոն</item>
        <item>ծածան</item>
        <item>սալամանդեր</item>
        <item>ծովաձիուկ</item>
        <item>փոկ</item>
        <item>ծովային կրիա</item>
        <item>ծովային սուսեր</item>
        <item>շնաձուկ</item>
        <item>մանր ծովախեցգետին</item>
        <item>ծովաստղ</item>
        <item>դոդոշ</item>
        <item>կրիա</item>
        <item>ծովառյուծ</item>
        <item>դեղին ձուկ</item>
    </string-array>
    <string-array name="real_animal_birds">
        <item>starling</item>
        <item>robin</item>
        <item>eagle</item>
        <item>bee_eater</item>
        <item>bat</item>
        <item>budgie</item>
        <item>canary</item>
        <item>crow</item>
        <item>dove</item>
        <item>duck</item>
        <item>finch</item>
        <item>flamingo</item>
        <item>goose</item>
        <item>hawk</item>
        <item>hen</item>
        <item>heron</item>
        <item>hoopoe</item>
        <item>hummingbird</item>
        <item>ostrich</item>
        <item>owl</item>
        <item>parrot</item>
        <item>partridge</item>
        <item>peacock</item>
        <item>pelican</item>
        <item>penguin</item>
        <item>pheasant</item>
        <item>pigeon</item>
        <item>rooster</item>
        <item>seagull</item>
        <item>sparrow</item>
        <item>storks</item>
        <item>swan</item>
        <item>vulture</item>
        <item>woodpecker</item>
    </string-array>
    <string-array name="real_animal_birds_arm">
        <item>սարյակ</item>
        <item>շիկահավ</item>
        <item>արծիվ</item>
        <item>մեղվակեր</item>
        <item>չղջիկ</item>
        <item>թութակ</item>
        <item>դեղձանիկ</item>
        <item>ագռավ</item>
        <item>աղավնի</item>
        <item>բադ</item>
        <item>սերինոս</item>
        <item>ֆլամինգո</item>
        <item>սագ</item>
        <item>անգղ</item>
        <item>հավ</item>
        <item>ձկնկուլ</item>
        <item>հոպոպ</item>
        <item>կոլիբրի</item>
        <item>ջայլամ</item>
        <item>բու</item>
        <item>թութակ</item>
        <item>կաքավ</item>
        <item>սիրամարգ</item>
        <item>փորահավ</item>
        <item>պինգվին</item>
        <item>փասիան</item>
        <item>աղավնի</item>
        <item>աքաղաղ</item>
        <item>ճայ</item>
        <item>ճնճղուկ</item>
        <item>արագիլ</item>
        <item>կարապ</item>
        <item>գիշանգղ</item>
        <item>փայտփորիկ</item>
    </string-array>
    <string-array name="real_animal_domestic">
        <item>cat</item>
        <item>cow</item>
        <item>dog</item>
        <item>donkey</item>
        <item>duck</item>
        <item>goat</item>
        <item>goldfish</item>
        <item>goose</item>
        <item>hen</item>
        <item>horse</item>
        <item>mouse</item>
        <item>mule</item>
        <item>pig</item>
        <item>pigeon</item>
        <item>rabbit</item>
        <item>rooster</item>
        <item>sheep</item>
        <item>turkey</item>
    </string-array>
    <string-array name="real_animal_domestic_arm">
        <item>կատու</item>
        <item>կով</item>
        <item>շուն</item>
        <item>ավանակ</item>
        <item>բադ</item>
        <item>այծ</item>
        <item>ոսկե ձուկ</item>
        <item>սագ</item>
        <item>հավ</item>
        <item>ձի</item>
        <item>մուկ</item>
        <item>ավանակ</item>
        <item>խոզ</item>
        <item>աղավնի</item>
        <item>ճագար</item>
        <item>աքաղաղ</item>
        <item>ոչխար</item>
        <item>հդնկահավ</item>
    </string-array>
    <string name="arm_cat">կատու</string>
    <string name="arm_cow">կով</string>
    <string name="arm_dog">շուն</string>
    <string name="arm_donkey">ավանակ</string>
    <string name="arm_goat">այծ</string>
    <string name="arm_goldfish">ոսկե ձուկ</string>
    <string name="arm_horse">ձի</string>
    <string name="arm_mouse">մուկ</string>
    <string name="arm_mule">ավանակ</string>
    <string name="arm_pig">խոզ</string>
    <string name="arm_rabbit">ճագար</string>
    <string name="arm_sheep">ոչխար</string>
    <string name="arm_turkey">հնդկահավ</string>
    <string name="arm_tuna">Թունա</string>
    <string name="arm_lizard">մողես</string>
    <string name="arm_sword_fish">թրաձուկ</string>
    <string name="arm_striped_marlin">գծավոր սղոցաձուկ</string>
    <string name="arm_stingray">կատվաձուկ</string>
    <string name="arm_squid">կաղամար</string>
    <string name="arm_otter">ջրասամույր</string>
    <string name="arm_orca_whale">կետանման դելֆին</string>
    <string name="arm_marlin">սղոցաձուկ</string>
    <string name="arm_alligator">ալիգատոր</string>
    <string name="arm_blue_whale">Կապույտ կետ</string>
    <string name="arm_cat_fish">լոքո</string>
    <string name="arm_clown_fish">ծաղրածու ձուկ</string>
    <string name="arm_cobra_snake">կոբրա</string>
    <string name="arm_crab">ծովախեցգետին</string>
    <string name="arm_crocodile">կոկորդիլոս</string>
    <string name="arm_dolphin">դելֆին</string>
    <string name="arm_eel">օձաձուկ</string>
    <string name="arm_frog">գորտ</string>
    <string name="arm_iguana">վարան</string>
    <string name="arm_jelly_fish">մեդուզա</string>
    <string name="arm_lobster">օմար</string>
    <string name="arm_octopus">ութոտնուկ</string>
    <string name="arm_porcupine_fish">ոզնեձուկ</string>
    <string name="arm_python_snake">պիտոն</string>
    <string name="arm_rainbow_trout">ծածան</string>
    <string name="arm_salamander">սալամանդեր</string>
    <string name="arm_sea_horse">ծովաձիուկ</string>
    <string name="arm_seal">փոկ</string>
    <string name="arm_seaturtle">ծովային կրիա</string>
    <string name="arm_sea_urchin">ծովային սուսեր</string>
    <string name="arm_shark">շնաձուկ</string>
    <string name="arm_shrimp">մանր ծովախեցգետին</string>
    <string name="arm_starfish">ծովաստղ</string>
    <string name="arm_toad">դոդոշ</string>
    <string name="arm_turtle">կրիա</string>
    <string name="arm_warlus">ծովառյուծ</string>
    <string name="arm_yellow_fish">դեղին ձուկ</string>
    <string name="arm_starling">սարյակ</string>
    <string name="arm_robin">շիկահավ</string>
    <string name="arm_eagle">արծիվ</string>
    <string name="arm_bee_eater">մեղվակեր</string>
    <string name="arm_bat">չղջիկ</string>
    <string name="arm_budgie">թութակ</string>
    <string name="arm_canary">դեղձանիկ</string>
    <string name="arm_crow">ագռավ</string>
    <string name="arm_dove">աղավնի</string>
    <string name="arm_duck">բադ</string>
    <string name="arm_finch">սերինոս</string>
    <string name="arm_flamingo">ֆլամինգո</string>
    <string name="arm_goose">սագ</string>
    <string name="arm_hawk">անգղ</string>
    <string name="arm_hen">հավ</string>
    <string name="arm_heron">ձկնկուլ</string>
    <string name="arm_hoopoe">հոպոպ</string>
    <string name="arm_hummingbird">կոլիբրի</string>
</resources>