<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/learn_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/rl_buttons_cartoon_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="32dp">

            <RelativeLayout
                android:id="@+id/rl_domestic"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/choise_one"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="onViewClicked"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_learn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageView"
                    android:layout_toStartOf="@+id/imageView"
                    android:gravity="center"
                    android:text="@string/learn"
                    android:textColor="#fff"
                    android:textSize="26dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_learn" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_write"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/choise_twoo"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="onViewClicked"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_write"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_write"
                    android:layout_toStartOf="@+id/iv_write"
                    android:gravity="center"
                    android:text="@string/write"
                    android:textColor="#fff"
                    android:textSize="26dp" />

                <ImageView
                    android:id="@+id/iv_write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_write" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_puzzle"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/choise_twoo"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="onViewClicked"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_puzzle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_puzzles"
                    android:layout_toStartOf="@+id/iv_puzzles"
                    android:gravity="center"
                    android:text="@string/puzzle"
                    android:textColor="#fff"
                    android:textSize="26dp" />

                <ImageView
                    android:id="@+id/iv_puzzles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iz_puzzle" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_play"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/choise_twoo"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="onViewClicked"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_play"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_play"
                    android:layout_toStartOf="@+id/iv_play"
                    android:gravity="center"
                    android:text="@string/play"
                    android:textColor="#fff"
                    android:textSize="26dp" />

                <ImageView
                    android:id="@+id/iv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_play" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_bubbles"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/choise_twoo"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="onViewClicked"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_bubbles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_bubbles"
                    android:layout_toStartOf="@+id/iv_bubbles"
                    android:gravity="center"
                    android:text="@string/bubbles"
                    android:textColor="#fff"
                    android:textSize="26dp" />

                <ImageView
                    android:id="@+id/iv_bubbles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_bubbles" />
            </RelativeLayout>



        </LinearLayout>
    </ScrollView>


    <CheckBox
        android:id="@+id/cb_mute_unmute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:button="@drawable/selector_mute_unmute"
        android:gravity="left"
        android:text=""
        android:textColor="@color/white" />

    <FrameLayout
        android:id="@+id/fl_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
